# rl-quad-RRIA

./: .gitignore  MUJOCO_LOG.TXT  README.md  custom_env.py  first_run.py  pyproject.toml  pyproject2.toml  quad_env.py  replay_buffer.py  run_env.py  run_experiments.py  sac_continuous_action.py  simulate_environment.py  wand.py
docker/: Dockerfile  build_docker.sh  run_docker.sh
mujoco_menagerie/: tutorial.ipynb
rl-quad-rria/: experiment_run.py  rl_quad.py
rl_quad/: __init__.py
rl_quad/envs/: __init__.py  quad_env.py
rl_quad/wrappers/: __init__.py
robots/boston_dynamics_spot/: scene.xml
runs/run__1736779442/: events.out.tfevents.1736779442.pc040-ubu.96318.0
runs/run__1736779557/: events.out.tfevents.1736779557.pc040-ubu.97472.0
runs/run__1736779820/: events.out.tfevents.1736779820.pc040-ubu.100126.0
runs/run__1736779833/: events.out.tfevents.1736779833.pc040-ubu.100482.0
runs/run__1736779858/: events.out.tfevents.1736779858.pc040-ubu.100862.0
runs/run__1736779929/: events.out.tfevents.1736779929.pc040-ubu.102086.0
runs/run__1736780259/: events.out.tfevents.1736780259.pc040-ubu.105518.0
runs/run__1736780506/: events.out.tfevents.1736780506.pc040-ubu.108170.0
runs/run__1736780519/: events.out.tfevents.1736780519.pc040-ubu.108384.0
runs/run__1736780611/: events.out.tfevents.1736780611.pc040-ubu.4631.0
runs/run__1736783549/: events.out.tfevents.1736783549.pc040-ubu.7082.0
runs/run__1736783625/: events.out.tfevents.1736783625.pc040-ubu.7879.0
runs/run__1736784393/: events.out.tfevents.1736784393.pc040-ubu.14997.0
wandb/: latest-run
wandb/run-20241118_081809-kxwqkju2/: run-kxwqkju2.wandb
wandb/run-20241118_083835-9svr6xrr/: run-9svr6xrr.wandb
wandb/run-20241118_084445-kbm72uvz/: run-kbm72uvz.wandb
wandb/run-20241118_084657-me5peu2d/: run-me5peu2d.wandb
(+205 files in other folders)
