[tool.poetry]
name = "rl-quad-rria"
version = "0.1.0"
description = "Environment for development of RL-based controller for simulated Spot Robot"
authors = ["Daniel-Salvador <dvccs@softex.cin.ufpe.br>"]

[tool.poetry.dependencies]
python = "^3.10"
gymnasium = {extras = ["mujoco"], version = "^1.0.0"}
stable-baselines3 = {git = "https://github.com/DLR-RM/stable-baselines3"}
tensorboard = "^2.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
